--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "this is a full stack app",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "vikas",
